# study_ai_agent

./: README.md
0303/: README.md
0303/study41/: app1.py  app2.py  app3.py  app3_2.py  main.py  settings.py
0310/: README.md
0311/: 0311_db_project_sql.sql  tableinsert.sql
0312/: README.md
0313hw/frontend/: index.html
0317metro/: 0816table.sql  2017table.sql  2018table.sql  study1.sql  study2.sql  study3_사용자정의함수.sql  study4_사용자정의함수.sql  study4_사용자정의함수_test.sql  study4_사용자정의함수_강사님코드.sql  study5_프로시저.sql  study5_프로시저_test.sql  table_create.sql  table_insert.sql  table_update.sql
0327/: README.md
0403/: 0403hw.md  README.md
0406/: README.md
0408/: README.md
0410/: index.html  script.js  style.css
0410/board/: app.js  index.html  style.css
0410/scratch/: ollama_request.json
0413/: README.md
study41/: app2_1.py
study42/: README.md  app1.py  app3_3.py  mariadb_crud.py  pyproject.toml
study42/pages/: page1.py  page3.py  page4.py  page5.py  page6.py  page7.py
study43/: README.md
study43/pages/: 1_yes24.py  2_interpark.py  3_daily.py  4_yes.py
study45/: README.md  main.py  settings.py
study45_2/: etlTest.py  main.py  pyproject.toml
study46/: compose.yml
study47/: compose.yml
study47/frontend/: vite.config.js
study48/: README.md  compose.yml
study48/app1/: main.py  pyproject.toml  (+1 more)
study50/: README.md
study50/app/: main.py  pyproject.toml
study50/app/output/: 지식그래프_최종.json
study51/: README.md
study54/app/: main.py  pyproject.toml
study54/app/src/: step3.py  step4.py  step5.py
study60/: compose.yml  createtable.sql
(+55 files in other folders)
